# yagoutpay

./: README.md
yagoutpay-dotnet/: .gitignore  CHANGELOG.md  LICENSE  README.md  YagoutPay.csproj  docker-compose.yml  env.example
yagoutpay-dotnet/demo/: DemoApp.csproj  Program.cs
yagoutpay-dotnet/demo_simple/: DemoApp.csproj  Program.cs
yagoutpay-dotnet/src/YagoutPay/: Configuration.cs  Crypto.cs  Models.cs  YagoutPayClient.cs
yagoutpay-js/: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  package-lock.json  package.json
yagoutpay-js/demo/: server.js
yagoutpay-js/docker/: nginx.conf
yagoutpay-php/: Dockerfile  README.md  composer.json  docker-compose.yml  env.example
yagoutpay-php/demo/: .htaccess  .htaccess.bak  config.php  failure.php  index.php  success.php
yagoutpay-php/docker/: apache.conf  init.sql
yagoutpay-php/src/: YagoutPaySDK.php
yagoutpay-python/: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
yagoutpay-python/demo/: main.py
yagoutpay-python/demo/static/css/: styles.css
yagoutpay-python/demo/templates/: failure.html  index.html  success.html
yagoutpay-python/src/yagoutpay/: __init__.py  client.py  crypto.py  models.py
